# qucs_s

.github/workflows/: deploy.yml
qucs/: CMakeLists.txt  healer.cpp  main.cpp  main.h  module.cpp  mouseactions.cpp  qucs.cpp  qucs.h  qucs_actions.cpp  qucs_init.cpp  schematic.h  schematic_element.cpp  schematic_file.cpp  wire.cpp  wire.h
qucs-s-spar-viewer/: CMakeLists.txt  polarplotwidget.cpp  polarplotwidget.h  qucs-s-spar-viewer.cpp  qucs-s-spar-viewer.h  rectangularplotwidget.cpp  rectangularplotwidget.h  smithchartwidget.cpp  smithchartwidget.h
qucs/components/: CMakeLists.txt  components.h  symtrafo.cpp  transformer.cpp
qucs/magnetics/: CMakeLists.txt  ja_core.cpp  ja_core.h  magcoredialog.cpp  magcoredialog.h  winding.cpp
